Fix overflow issue with todo item buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -199,10 +199,15 @@ body::-webkit-scrollbar {
     border-radius: .5rem;
     padding: 1rem;
     box-shadow: 0px 0px 2px .01px;
-    display: grid;
-    gap: .5rem;
+    display: flex;
+    justify-content: space-between;
     max-height: 250px;
+    width: 100%;
 }
+/* 
+.todo-item * {
+    border: 2px solid red;
+} */
 
 .todo-item:first-child {
     background-color: rgb(240, 248, 255);
@@ -216,20 +221,18 @@ body::-webkit-scrollbar {
     background-color: rgb(255, 255, 230);
 }
 
+.todo-item-information {
+    width: 500px;
+}
+
 .todo-item-title {
     font-size: 2.25rem;
     font-weight: bold;
-    grid-row: 1/2;
-    grid-column: 1/2;
 }
 
 .todo-item-properties {
     display: flex;
     gap: 2rem;
-    grid-row: 2/3;
-    grid-column: 1/2;
-    width: 500px;
-    max-width: 700px;
     max-height: 50px;
     overflow: auto;
     scrollbar-width: none;
@@ -243,8 +246,6 @@ body::-webkit-scrollbar {
 .todo-item-buttons-container {
     display: flex;
     gap: .5rem;
-    grid-row: 2/3;
-    grid-column: 2/3;
     justify-content: flex-end;
     align-items: flex-end;
 }
